2010-12-14  Bahadır Kandemir <bahadir@pardus.org.tr>

	* po/tr.po: Updated translations.

2010-11-25  Tomas Mraz  <tm@t8m.info>

	* modules/pam_securetty/pam_securetty.8.xml: Improve documentation
	of the kernel console feature and the noconsole option.

2010-11-24  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_securetty/pam_securetty.c: Parse console= kernel
	option, add noconsole option.
	* modules/pam_securetty/pam_securetty.8.xml: Document new behavior
	for serial console.
	Patch from Lennart Poettering.

2010-11-24  Tomas Mraz  <tm@t8m.info>

	* modules/pam_limits/limits.conf.5.xml: Document the %group syntax.

2010-11-18  Tomas Mraz  <tm@t8m.info>

	* modules/pam_limits/pam_limits.c (pam_parse,pam_sm_open_session):
	Drop obsolete and broken option change_uid.
	* modules/pam_limits/pam_limits.8.xml: Likewise.

2010-11-16  Tomas Mraz  <tm@t8m.info>

	* modules/pam_pwhistory/pam_pwhistory.c (pam_sm_chauthtok): Remove
	dead and duplicate code. Return PAM_INCOMPLETE instead of
	PAM_CONV_AGAIN.

2010-11-11  Tomas Mraz  <tm@t8m.info>

	* modules/pam_selinux/pam_selinux.c (pam_sm_open_session): Fix
	potential use after free in case SELinux is misconfigured.

	* modules/pam_namespace/pam_namespace.c (process_line): Fix memory
	leak when parsing empty config file lines.

2010-10-28  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 1.1.3

	* configure.in: Increase version to 1.1.3

	* NEWS: document visible changes

	* libpam/Makefile.am (libpam_la_LDFLAGS): Bump version number.

2010-10-27  Thorsten Kukuk <kukuk@thkukuk.de>

	* doc/adg/Makefile.am: Use UTF-8 for html docu.
	* doc/mwg/Makefile.am: Likewise.
	* doc/sag/Makefile.am: Likewise.

2010-10-22  Tomas Mraz  <tm@t8m.info>

	* modules/pam_namespace/pam_namespace.c (inst_init): Use execle()
	to execute the init script with clean environment. (CVE-2010-3853)
	(cleanup_tmpdirs): Likewise for executing rm.

2010-10-21  Dmitry V. Levin  <ldv@altlinux.org>
